# EngineR

./: Cargo.toml  config.toml
src/: main.rs
src/controllers/: dictionary_type.rs  link.rs  login_logout.rs  mod.rs  object.rs  object_type.rs  user.rs
src/controllers/form_parser/: credentials.rs  dictionary_type.rs  error.rs  link.rs  mod.rs  object.rs  object_type.rs  range.rs  user.rs
src/controllers/object/: tests.rs
src/controllers/pool/: pool.rs
src/controllers/secure/: mod.rs
src/controllers/secure/authentication/: authentication.rs  credentials.rs  mod.rs  strategy.rs  token.rs
src/controllers/secure/authorization/: authorization.rs  mod.rs  strategy.rs  token.rs  vote.rs
src/controllers/test/: mod.rs
src/controllers/user/: tests.rs
src/model/: error.rs  mod.rs
src/model/app/pool/: pool.rs
src/model/base/: mod.rs
src/model/base/adapter/: adapter.rs
src/model/base/repository/: repository.rs
src/model/config/entity/: config.rs
src/model/dictionary/entity/: dictionary.rs
src/model/dictionary/repository/: repository.rs
src/model/lfu_cache/: cache.rs
src/model/link/entity/: link.rs  mod.rs
src/model/link/repository/: repository.rs
src/model/object/entity/: mod.rs  object.rs
src/model/object/repository/: repository.rs
src/model/secure/entity/: mod.rs  permission.rs
src/model/secure/repository/: repository.rs
src/model/sql/: Model.rise  init_db.sh  sql_db.sql
src/model/user/entity/: action.rs  mod.rs  token.rs  user.rs
src/model/user/repository/: repository.rs
